# HADES-Lab

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLEANUP_SUMMARY_FINAL.md  LICENSE  MIGRATION_README.md  PHASE3_SUMMARY.md  README.md  arxiv_pipeline_v2_results_20250826_162353.json  arxiv_pipeline_v2_results_20250826_202950.json  export_missing.py  notes.md  pyproject.toml  setup_database.sh  setup_local.sh  setup_python_env.sh  test_chunking_fix.py  test_mcp_env.sh  test_memory_rag.py  test_ramfs_arangodb.py  test_resume.py  test_simple_chunking.py  verify_storage.py
benchmarks/reports/: get_cold_c128.json  get_hot.json  get_hot_c128.json  get_hot_c32.json  get_hot_c8.json  get_hot_random.json  insert_cold_16k.json  insert_cold_4k.json  insert_cold_async.json  insert_cold_sync.json  insert_hot_16k.json  insert_hot_4k.json  insert_hot_async.json  insert_hot_sync.json  query_cold.json  query_hot.json  query_hot_var_offset.json
config/: .gitignore
core/config/: README.md  __init__.py  arxiv_repository.env  config_base.py  config_loader.py
core/database/: __init__.py  arango_db_manager.py  arango_unix_client.py  benchmark_unix_socket.py  database_factory.py  unix_socket_benchmark_results.json
core/embedders/: README.md  __init__.py  benchmark_embedders.py  embedders_base.py  embedders_factory.py  embedders_jina.py  embedders_sentence.py
dev-utils/: check_arxiv_db.py  create_arxiv_repository_db.py  monitor_arxiv_progress.py  monitor_sorted.py  monitor_workflow_logs.py  setup_arxiv_database.py  setup_arxiv_database_simple.py  simple_monitor.py
docs/: 1a_sharding_toolkit_usage.md  CONVEYANCE_FRAMEWORK.md  DIRECTORY_STRUCTURE_UPDATE_2025.md  ISSUE_ARCHITECTURE_SEPARATION.md  available_edge_types.md  deathoftheauthor_notes.md  master_thesis_ideas.md
experiments/: README.md
old.claude/: adr-template.md  paper-review-template.md  settings.local.json
setup/: php_arango_setup.md  setup_database.sh  setup_local.sh  setup_python_env.sh  verify_environment.py  verify_storage.py
tests/: debug_extraction_failures.py  debug_segfault_isolated.py  debug_single_document.py  monitor_overnight.py  monitor_phased.py  test_batch_processing.py  test_batch_processing_simple.py  test_c_files.py  test_config_files.py  test_docling_timeout.py  test_document_processor.py  test_embedders_phase1.py  test_github_simple.py  test_github_treesitter.py  test_overnight_2000.py  test_overnight_arxiv_2000.py  test_overnight_arxiv_phased.py  test_phase2_workflows.py  test_phase4_integration.py  test_resume.py  test_robust_extraction.py  test_sorted_production.sh  test_sorted_simple.sh  test_sorted_workflow.sh  test_treesitter_simple.py  test_unix_socket.py  test_workflow_arxiv_sorted.py  test_workflow_arxiv_sorted_unique.py
tools/: GRAPH_ARCHITECTURE.md
(+482 files in other folders)
